PI-Cloud-Frontend/k8s/05-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: peakwell
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      hostAliases:
        - ip: "192.168.1.183"
          hostnames:
            - "192.168.1.183.nip.io"
      containers:
        - name: backend
          image: oussamaghalioun/peakwell-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
          volumeMounts:
            - name: uploads
              mountPath: /app/uploads
          readinessProbe:
            tcpSocket:
              port: 8090
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 10
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: uploads-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: peakwell
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 8090
      targetPort: 8090
